<resources>
    <string name="app_name">My Application</string>
    <string name="Title">Title</string>
    <string name="Price">Price</string>
    <string name="Brand">Brand</string>
    <string name="Description">Description</string>
    <string name="Ratings">Ratings</string>
    <string name="TitleVal">TitleVal</string>
    <string name="PriceVal">PriceVal</string>
    <string name="BrandVal">BrandVal</string>
    <string name="Next">Next</string>
    <string name="Prev">Prev</string>
    <string name="DescriptionVal">DescriptionVal</string>
</resources>